# edge-loop-bench

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
configs/: hardware.example.json  hardware.m3-pro-16gb.json  hardware.m4-air-16gb.json
docs/: experiment-design-v0.2.md  experiment-design-v0.3.md  experiment-design-v0.4.md  experiment-design-v0.5-fresh-evaluator-goal.md  experiment-design-v0.6-intercode-bash.md  experiment-design-v0.7-intercode-30task.md  experiment-protocol.md  hardware-protocol.md  linkedin-v04.md  metrics.md  model-matrix.md  research-plan.md  runnable-experiment-spec.md  sources.md  spec.md
results/: README.md
tests/: test_build_pinned_tokenizer.py  test_cli.py  test_config.py  test_controller.py  test_docker_action_executor.py  test_docker_cli.py  test_doctor.py  test_experiment.py  test_interactive_config.py  test_interactive_controller.py  test_interactive_controller_security.py  test_interactive_recovery.py  test_interactive_token_preflight.py  test_intercode_campaign_evidence.py  test_intercode_campaign_ledger.py  test_intercode_docker_attempt.py  test_intercode_evaluator.py  test_intercode_evaluator_bridge.py  test_intercode_gate_manifest.py  test_intercode_host_safety.py  test_intercode_image_assets.py  test_intercode_image_build.py  test_intercode_local_model.py  test_intercode_managed_ollama.py  test_intercode_qualification.py  test_intercode_qualification_units.py  test_intercode_replay_environment.py  test_intercode_source.py  test_intercode_source_inventory.py  (+28 more)
(+689 files in other folders)
